# topology-processor

./: .env  .gitignore  AT_topology_processor.py  CHANGELOG.md  COPYRIGHT  DebugTerminals.txt  Debuglinestable.txt  Debugnodes.txt  GarbageStorage.ipynb  README.md  ReadMe.ipynb  Run123NodeSensorServiceDemo.py  Run9500NodeDemo.py  TP_notebook.ipynb  TP_notebook.py  TP_service.py  TP_standalone.ipynb  TP_standalone.py  TP_subscriber.ipynb  Untitled.ipynb  Untitled1.ipynb  __init__.py  addressable_equipment.ipynb  class implementation.ipynb  gridappsd-topologyprocessor.py  linkedlist.py  linkedlist_old.py  linknet_func.py  output_message.json  process_network.py  pyproject.toml  spanning_tree.py  spanning_tree_old.py  switch_area_caller.py  switch_areas-Copy1.ipynb  switch_areas.ipynb  switch_areas.py  topo_background.config  topo_background_config.py  topo_background_service.py  (+12 more)
.github/workflows/: deploy-dev-release.yml  release.yml
.ipynb_checkpoints/: TP_notebook-checkpoint.ipynb  TP_standalone-checkpoint.ipynb  TP_subscriber-checkpoint.ipynb  addressable_equipment-checkpoint.ipynb  switch_areas-Copy1-checkpoint.ipynb  switch_areas-checkpoint.ipynb  unaddressable_equipment-checkpoint.ipynb
archive/: topologyservice.py
tests/: test_mrid_canonicalize.py
topology_processor/: Untitled.ipynb  __init__.py  blazegraph.py  blazegraph_connection.py  dist_api_message.json  distributedtopology.py  gridappsd-topology-daemon.config  gridappsd-topology-processor.config  gridappsd-topology-service.config  gridappsd_connection  networkmodel.py  topo_meas_queries.py  topo_tester.py  topologydictionary.py  topologydictionary_broken.py  topologydictionary_old.py  topologyprocessor.py  topologyservice.py
topology_processor/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
topology_processor/utils/: distributed_topo_message.py
